[package]
name = "proxylib"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3.16"
hyper = { version = "0.14.10", features = ["http1", "http2", "tcp", "client", "server"] }
thiserror = "1.0.22"

[dev-dependencies]
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.8.0"